// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`telegram authoritative retention > applies the configured high-growth limit to job and unresolved-source residue 1`] = `
{
  "adoptionClientQuotaPruned": 0,
  "adoptionDailyPruned": 0,
  "adoptionIngressQuotaPruned": 0,
  "adoptionRetentionPruned": 0,
  "cappedAtLimit": {
    "adoptionClientQuota": false,
    "adoptionDaily": false,
    "adoptionIngressQuota": false,
    "adoptionRetention": false,
    "chatAdminsCache": false,
    "chatMemberCache": false,
    "commandCooldownCache": false,
    "commandFloodCache": false,
    "deadLetters": false,
    "diagnostics": false,
    "freezeEvents": false,
    "freezeTargets": false,
    "groupWelcomeCache": false,
    "highGrowthRetention": true,
    "jobTargetItems": false,
    "jobTargets": false,
    "jobs": false,
    "miniAppAdoptionSessionCache": false,
    "miniAppMutationBurstCache": false,
    "planningSubscribers": false,
    "processedUpdates": false,
    "reEngagementWarningCache": false,
    "recapTargets": false,
    "sourceEvents": false,
    "sourceResolutionMemberships": false,
    "sourceResolutionPages": false,
    "sourceResolutionTargets": false,
    "targetExpiryProgress": false,
    "targetPlanItems": false,
    "targetPlanPages": false,
    "targetPlans": false,
    "usageDaily": false,
    "watcherLifecycle": false,
  },
  "chatAdminsCachePruned": 0,
  "chatMemberCachePruned": 0,
  "commandCooldownCachePruned": 0,
  "commandFloodCachePruned": 0,
  "deadLettersPruned": 0,
  "deleteBatchLimit": 10000,
  "diagnosticsPruned": 0,
  "expiredTargetsReconciled": 0,
  "freezeEventsPruned": 0,
  "freezeTargetsPruned": 0,
  "groupWelcomeCachePruned": 0,
  "highGrowthRetention": {
    "cappedAtLimit": true,
    "durationMs": 0,
    "error": null,
    "legacyTargetItemsPruned": 0,
    "legacyTargetsPruned": 0,
    "legacyTerminalJobsPruned": 2,
    "oldestLegacyTargetEligibleAt": null,
    "oldestLegacyTargetRemainingAt": null,
    "oldestUnresolvedSourceRemainingAt": 1797321600,
    "rowLimit": 2,
    "staleUnresolvedJobsPruned": 2,
    "staleUnresolvedSourcesPruned": 2,
    "terminalCutoff": 1798790400,
    "unresolvedCutoff": 1797408000,
  },
  "highVolumeDeleteLimit": 100000,
  "jobTargetItemsPruned": 0,
  "jobTargetsPruned": 0,
  "jobsPruned": 0,
  "legacyTargetItemsPruned": 0,
  "legacyTargetsPruned": 0,
  "legacyTerminalJobsPruned": 2,
  "miniAppAdoptionSessionCachePruned": 0,
  "miniAppMutationBurstCachePruned": 0,
  "planningSubscribersPruned": 0,
  "processedUpdatePruneBudget": {
    "batchLimit": 1000,
    "batches": 1,
    "rowLimit": 5000,
    "timeBudgetExhausted": false,
    "timeBudgetMs": 2000,
  },
  "processedUpdatesPruned": 0,
  "processedUpdatesRemainingBacklog": {
    "count": 0,
    "exact": true,
    "probeLimit": 5001,
  },
  "reEngagementWarningCachePruned": 0,
  "recapTargetsPruned": 0,
  "replayJobTargetItemsPruned": 0,
  "replayJobTargetsPruned": 0,
  "replayJobsPruned": 0,
  "replaySourceEventsPruned": 0,
  "retentionDays": {
    "adoptionClientQuota": 2,
    "adoptionDaily": 400,
    "adoptionIngressQuota": 2,
    "adoptionRetention": 400,
    "alertAudit": 90,
    "authoritativeReplay": 14,
    "authoritativeWorkflow": 1,
    "chatDiagnostics": 90,
    "miniAppAdoptionSessionCache": 0.020833333333333332,
    "processedUpdates": 7,
    "reEngagementWarningCache": 30,
    "recapTargetsTerminal": 90,
    "shortLivedChatCache": 7,
    "staleUnresolved": 30,
    "usageDaily": 400,
    "watcherLifecycle": 400,
  },
  "runBudgetTruncated": true,
  "sourceEventsPruned": 0,
  "sourceResolutionMembershipsPruned": 0,
  "sourceResolutionPagesPruned": 0,
  "sourceResolutionTargetsPruned": 0,
  "staleUnresolvedJobsPruned": 2,
  "staleUnresolvedSourcesPruned": 2,
  "targetExpiryProgressPruned": 0,
  "targetPlanItemsPruned": 0,
  "targetPlanPagesPruned": 0,
  "targetPlansPruned": 0,
  "usageDailyPruned": 0,
  "watcherLifecyclePruned": 0,
}
`;

exports[`telegram authoritative retention > degrades only the high-growth family when its cleanup query fails 1`] = `
{
  "adoptionClientQuotaPruned": 0,
  "adoptionDailyPruned": 0,
  "adoptionIngressQuotaPruned": 0,
  "adoptionRetentionPruned": 0,
  "cappedAtLimit": {
    "adoptionClientQuota": false,
    "adoptionDaily": false,
    "adoptionIngressQuota": false,
    "adoptionRetention": false,
    "chatAdminsCache": false,
    "chatMemberCache": false,
    "commandCooldownCache": false,
    "commandFloodCache": false,
    "deadLetters": false,
    "diagnostics": false,
    "freezeEvents": false,
    "freezeTargets": false,
    "groupWelcomeCache": false,
    "highGrowthRetention": false,
    "jobTargetItems": false,
    "jobTargets": false,
    "jobs": false,
    "miniAppAdoptionSessionCache": false,
    "miniAppMutationBurstCache": false,
    "planningSubscribers": false,
    "processedUpdates": false,
    "reEngagementWarningCache": false,
    "recapTargets": false,
    "sourceEvents": false,
    "sourceResolutionMemberships": false,
    "sourceResolutionPages": false,
    "sourceResolutionTargets": false,
    "targetExpiryProgress": false,
    "targetPlanItems": false,
    "targetPlanPages": false,
    "targetPlans": false,
    "usageDaily": false,
    "watcherLifecycle": false,
  },
  "chatAdminsCachePruned": 0,
  "chatMemberCachePruned": 0,
  "commandCooldownCachePruned": 0,
  "commandFloodCachePruned": 0,
  "deadLettersPruned": 0,
  "deleteBatchLimit": 10000,
  "diagnosticsPruned": 0,
  "expiredTargetsReconciled": 0,
  "freezeEventsPruned": 0,
  "freezeTargetsPruned": 0,
  "groupWelcomeCachePruned": 0,
  "highGrowthRetention": {
    "cappedAtLimit": false,
    "durationMs": 0,
    "error": "injected Telegram high-growth cleanup failure",
    "legacyTargetItemsPruned": 0,
    "legacyTargetsPruned": 0,
    "legacyTerminalJobsPruned": 0,
    "oldestLegacyTargetEligibleAt": null,
    "oldestLegacyTargetRemainingAt": null,
    "oldestUnresolvedSourceRemainingAt": null,
    "rowLimit": 100000,
    "staleUnresolvedJobsPruned": 0,
    "staleUnresolvedSourcesPruned": 0,
    "terminalCutoff": 1798790400,
    "unresolvedCutoff": 1797408000,
  },
  "highVolumeDeleteLimit": 100000,
  "jobTargetItemsPruned": 0,
  "jobTargetsPruned": 0,
  "jobsPruned": 0,
  "legacyTargetItemsPruned": 0,
  "legacyTargetsPruned": 0,
  "legacyTerminalJobsPruned": 0,
  "miniAppAdoptionSessionCachePruned": 0,
  "miniAppMutationBurstCachePruned": 0,
  "planningSubscribersPruned": 0,
  "processedUpdatePruneBudget": {
    "batchLimit": 1000,
    "batches": 1,
    "rowLimit": 5000,
    "timeBudgetExhausted": false,
    "timeBudgetMs": 2000,
  },
  "processedUpdatesPruned": 0,
  "processedUpdatesRemainingBacklog": {
    "count": 0,
    "exact": true,
    "probeLimit": 5001,
  },
  "reEngagementWarningCachePruned": 0,
  "recapTargetsPruned": 0,
  "replayJobTargetItemsPruned": 0,
  "replayJobTargetsPruned": 0,
  "replayJobsPruned": 0,
  "replaySourceEventsPruned": 0,
  "retentionDays": {
    "adoptionClientQuota": 2,
    "adoptionDaily": 400,
    "adoptionIngressQuota": 2,
    "adoptionRetention": 400,
    "alertAudit": 90,
    "authoritativeReplay": 14,
    "authoritativeWorkflow": 1,
    "chatDiagnostics": 90,
    "miniAppAdoptionSessionCache": 0.020833333333333332,
    "processedUpdates": 7,
    "reEngagementWarningCache": 30,
    "recapTargetsTerminal": 90,
    "shortLivedChatCache": 7,
    "staleUnresolved": 30,
    "usageDaily": 400,
    "watcherLifecycle": 400,
  },
  "runBudgetTruncated": false,
  "sourceEventsPruned": 0,
  "sourceResolutionMembershipsPruned": 0,
  "sourceResolutionPagesPruned": 0,
  "sourceResolutionTargetsPruned": 0,
  "staleUnresolvedJobsPruned": 0,
  "staleUnresolvedSourcesPruned": 0,
  "targetExpiryProgressPruned": 0,
  "targetPlanItemsPruned": 0,
  "targetPlanPagesPruned": 0,
  "targetPlansPruned": 0,
  "usageDailyPruned": 0,
  "watcherLifecyclePruned": 0,
}
`;

exports[`telegram authoritative retention > preserves the complete empty-run metadata contract 1`] = `
{
  "adoptionClientQuotaPruned": 0,
  "adoptionDailyPruned": 0,
  "adoptionIngressQuotaPruned": 0,
  "adoptionRetentionPruned": 0,
  "cappedAtLimit": {
    "adoptionClientQuota": false,
    "adoptionDaily": false,
    "adoptionIngressQuota": false,
    "adoptionRetention": false,
    "chatAdminsCache": false,
    "chatMemberCache": false,
    "commandCooldownCache": false,
    "commandFloodCache": false,
    "deadLetters": false,
    "diagnostics": false,
    "freezeEvents": false,
    "freezeTargets": false,
    "groupWelcomeCache": false,
    "highGrowthRetention": false,
    "jobTargetItems": false,
    "jobTargets": false,
    "jobs": false,
    "miniAppAdoptionSessionCache": false,
    "miniAppMutationBurstCache": false,
    "planningSubscribers": false,
    "processedUpdates": false,
    "reEngagementWarningCache": false,
    "recapTargets": false,
    "sourceEvents": false,
    "sourceResolutionMemberships": false,
    "sourceResolutionPages": false,
    "sourceResolutionTargets": false,
    "targetExpiryProgress": false,
    "targetPlanItems": false,
    "targetPlanPages": false,
    "targetPlans": false,
    "usageDaily": false,
    "watcherLifecycle": false,
  },
  "chatAdminsCachePruned": 0,
  "chatMemberCachePruned": 0,
  "commandCooldownCachePruned": 0,
  "commandFloodCachePruned": 0,
  "deadLettersPruned": 0,
  "deleteBatchLimit": 10000,
  "diagnosticsPruned": 0,
  "expiredTargetsReconciled": 0,
  "freezeEventsPruned": 0,
  "freezeTargetsPruned": 0,
  "groupWelcomeCachePruned": 0,
  "highGrowthRetention": {
    "cappedAtLimit": false,
    "durationMs": 0,
    "error": null,
    "legacyTargetItemsPruned": 0,
    "legacyTargetsPruned": 0,
    "legacyTerminalJobsPruned": 0,
    "oldestLegacyTargetEligibleAt": null,
    "oldestLegacyTargetRemainingAt": null,
    "oldestUnresolvedSourceRemainingAt": null,
    "rowLimit": 100000,
    "staleUnresolvedJobsPruned": 0,
    "staleUnresolvedSourcesPruned": 0,
    "terminalCutoff": 1798790400,
    "unresolvedCutoff": 1797408000,
  },
  "highVolumeDeleteLimit": 100000,
  "jobTargetItemsPruned": 0,
  "jobTargetsPruned": 0,
  "jobsPruned": 0,
  "legacyTargetItemsPruned": 0,
  "legacyTargetsPruned": 0,
  "legacyTerminalJobsPruned": 0,
  "miniAppAdoptionSessionCachePruned": 0,
  "miniAppMutationBurstCachePruned": 0,
  "planningSubscribersPruned": 0,
  "processedUpdatePruneBudget": {
    "batchLimit": 1000,
    "batches": 1,
    "rowLimit": 5000,
    "timeBudgetExhausted": false,
    "timeBudgetMs": 2000,
  },
  "processedUpdatesPruned": 0,
  "processedUpdatesRemainingBacklog": {
    "count": 0,
    "exact": true,
    "probeLimit": 5001,
  },
  "reEngagementWarningCachePruned": 0,
  "recapTargetsPruned": 0,
  "replayJobTargetItemsPruned": 0,
  "replayJobTargetsPruned": 0,
  "replayJobsPruned": 0,
  "replaySourceEventsPruned": 0,
  "retentionDays": {
    "adoptionClientQuota": 2,
    "adoptionDaily": 400,
    "adoptionIngressQuota": 2,
    "adoptionRetention": 400,
    "alertAudit": 90,
    "authoritativeReplay": 14,
    "authoritativeWorkflow": 1,
    "chatDiagnostics": 90,
    "miniAppAdoptionSessionCache": 0.020833333333333332,
    "processedUpdates": 7,
    "reEngagementWarningCache": 30,
    "recapTargetsTerminal": 90,
    "shortLivedChatCache": 7,
    "staleUnresolved": 30,
    "usageDaily": 400,
    "watcherLifecycle": 400,
  },
  "runBudgetTruncated": false,
  "sourceEventsPruned": 0,
  "sourceResolutionMembershipsPruned": 0,
  "sourceResolutionPagesPruned": 0,
  "sourceResolutionTargetsPruned": 0,
  "staleUnresolvedJobsPruned": 0,
  "staleUnresolvedSourcesPruned": 0,
  "targetExpiryProgressPruned": 0,
  "targetPlanItemsPruned": 0,
  "targetPlanPagesPruned": 0,
  "targetPlansPruned": 0,
  "usageDailyPruned": 0,
  "watcherLifecyclePruned": 0,
}
`;

exports[`telegram authoritative retention > prunes terminal workflow rows and settled replay bundles without deleting ambiguous or active work 1`] = `
{
  "adoptionClientQuotaPruned": 0,
  "adoptionDailyPruned": 0,
  "adoptionIngressQuotaPruned": 0,
  "adoptionRetentionPruned": 0,
  "cappedAtLimit": {
    "adoptionClientQuota": false,
    "adoptionDaily": false,
    "adoptionIngressQuota": false,
    "adoptionRetention": false,
    "chatAdminsCache": false,
    "chatMemberCache": false,
    "commandCooldownCache": false,
    "commandFloodCache": false,
    "deadLetters": false,
    "diagnostics": false,
    "freezeEvents": false,
    "freezeTargets": false,
    "groupWelcomeCache": false,
    "highGrowthRetention": false,
    "jobTargetItems": false,
    "jobTargets": false,
    "jobs": false,
    "miniAppAdoptionSessionCache": false,
    "miniAppMutationBurstCache": false,
    "planningSubscribers": false,
    "processedUpdates": false,
    "reEngagementWarningCache": false,
    "recapTargets": false,
    "sourceEvents": false,
    "sourceResolutionMemberships": false,
    "sourceResolutionPages": false,
    "sourceResolutionTargets": false,
    "targetExpiryProgress": false,
    "targetPlanItems": false,
    "targetPlanPages": false,
    "targetPlans": false,
    "usageDaily": false,
    "watcherLifecycle": false,
  },
  "chatAdminsCachePruned": 0,
  "chatMemberCachePruned": 0,
  "commandCooldownCachePruned": 0,
  "commandFloodCachePruned": 0,
  "deadLettersPruned": 0,
  "deleteBatchLimit": 10000,
  "diagnosticsPruned": 0,
  "expiredTargetsReconciled": 0,
  "freezeEventsPruned": 0,
  "freezeTargetsPruned": 0,
  "groupWelcomeCachePruned": 0,
  "highGrowthRetention": {
    "cappedAtLimit": false,
    "durationMs": 0,
    "error": null,
    "legacyTargetItemsPruned": 0,
    "legacyTargetsPruned": 0,
    "legacyTerminalJobsPruned": 0,
    "oldestLegacyTargetEligibleAt": null,
    "oldestLegacyTargetRemainingAt": null,
    "oldestUnresolvedSourceRemainingAt": 1798704000,
    "rowLimit": 100000,
    "staleUnresolvedJobsPruned": 0,
    "staleUnresolvedSourcesPruned": 0,
    "terminalCutoff": 1798790400,
    "unresolvedCutoff": 1797408000,
  },
  "highVolumeDeleteLimit": 100000,
  "jobTargetItemsPruned": 0,
  "jobTargetsPruned": 1,
  "jobsPruned": 1,
  "legacyTargetItemsPruned": 0,
  "legacyTargetsPruned": 0,
  "legacyTerminalJobsPruned": 0,
  "miniAppAdoptionSessionCachePruned": 0,
  "miniAppMutationBurstCachePruned": 0,
  "planningSubscribersPruned": 2,
  "processedUpdatePruneBudget": {
    "batchLimit": 1000,
    "batches": 1,
    "rowLimit": 5000,
    "timeBudgetExhausted": false,
    "timeBudgetMs": 2000,
  },
  "processedUpdatesPruned": 0,
  "processedUpdatesRemainingBacklog": {
    "count": 0,
    "exact": true,
    "probeLimit": 5001,
  },
  "reEngagementWarningCachePruned": 0,
  "recapTargetsPruned": 0,
  "replayJobTargetItemsPruned": 0,
  "replayJobTargetsPruned": 1,
  "replayJobsPruned": 1,
  "replaySourceEventsPruned": 1,
  "retentionDays": {
    "adoptionClientQuota": 2,
    "adoptionDaily": 400,
    "adoptionIngressQuota": 2,
    "adoptionRetention": 400,
    "alertAudit": 90,
    "authoritativeReplay": 14,
    "authoritativeWorkflow": 1,
    "chatDiagnostics": 90,
    "miniAppAdoptionSessionCache": 0.020833333333333332,
    "processedUpdates": 7,
    "reEngagementWarningCache": 30,
    "recapTargetsTerminal": 90,
    "shortLivedChatCache": 7,
    "staleUnresolved": 30,
    "usageDaily": 400,
    "watcherLifecycle": 400,
  },
  "runBudgetTruncated": false,
  "sourceEventsPruned": 1,
  "sourceResolutionMembershipsPruned": 2,
  "sourceResolutionPagesPruned": 2,
  "sourceResolutionTargetsPruned": 2,
  "staleUnresolvedJobsPruned": 0,
  "staleUnresolvedSourcesPruned": 0,
  "targetExpiryProgressPruned": 2,
  "targetPlanItemsPruned": 2,
  "targetPlanPagesPruned": 2,
  "targetPlansPruned": 1,
  "usageDailyPruned": 0,
  "watcherLifecyclePruned": 0,
}
`;
